<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- These menu items are common to tablet and phone. -->
        <item android:id="@+id/icon_row_menu_id"
            android:title="@null">
            <menu>
              <item android:id="@+id/forward_menu_id"
                android:title="@string/accessibility_menu_forward"
                android:icon="@drawable/btn_forward"/>
              <item android:id="@+id/bookmark_this_page_id"
                android:title="@string/accessibility_menu_bookmark"
                android:icon="@drawable/btn_star"/>
              <item android:id="@+id/offline_page_id"
                android:title="@string/download_page"
                android:icon="@drawable/ic_get_app_white_24dp"/>
              <item android:id="@+id/info_menu_id"
                android:title="@string/accessibility_menu_info"
                android:icon="@drawable/btn_info" />
              <item android:id="@+id/reload_menu_id"
                android:title="@string/accessibility_btn_refresh"
                android:icon="@drawable/btn_reload_stop"/>
            </menu>
        </item>
        <item android:id="@+id/all_bookmarks_menu_id"
            android:title="@string/menu_bookmarks" />
        <item android:id="@+id/open_history_menu_id"
            android:title="@string/menu_history" />
        <item android:id="@+id/downloads_menu_id"
            android:title="@string/menu_downloads" />
        <item android:id="@+id/preferences_id"
            android:title="@string/menu_preferences" />
        <item android:id="@+id/help_id"
            android:title="@string/menu_help" />

</menu>

